[gd_scene load_steps=11 format=3 uid="uid://cl8i21571i4qa"]

[ext_resource type="Script" path="res://scenes/card/card_base.gd" id="1_o734l"]
[ext_resource type="Texture2D" uid="uid://dal2ec8wws714" path="res://icon.svg" id="1_xb23j"]
[ext_resource type="PackedScene" uid="uid://dh3sjq06r8ou2" path="res://scenes/card/stat_panel.tscn" id="2_ujv87"]
[ext_resource type="Texture2D" uid="uid://cj7nvglef8cu" path="res://assets/cards/solbadguy/normal_grasp.tres" id="4_krtfi"]
[ext_resource type="Texture2D" uid="uid://cpolsw2tyi4m" path="res://assets/cardbacks/cardback_blue.svg" id="4_pvdi7"]
[ext_resource type="Texture2D" uid="uid://cy0pcorknc8op" path="res://assets/cards/border_thin_pressed.png" id="6_h5u6x"]
[ext_resource type="Texture2D" uid="uid://c7ojn7hf8n4li" path="res://assets/icons/stopwatch.png" id="7_rrupl"]
[ext_resource type="Texture2D" uid="uid://xusjesyfjald" path="res://assets/icons/x.png" id="8_wk1ir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_as8ve"]
bg_color = Color(1, 0.905882, 0.133333, 0.815686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btcod"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="CardBase" type="Node2D"]
script = ExtResource("1_o734l")

[node name="CardFocusFeatures" type="Node2D" parent="."]

[node name="Backlight" type="Panel" parent="CardFocusFeatures"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -187.5
offset_right = 137.5
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_as8ve")

[node name="CardContainer" type="MarginContainer" parent="CardFocusFeatures"]
custom_minimum_size = Vector2(250, 350)
offset_left = -125.0
offset_top = -175.0
offset_right = 125.0
offset_bottom = 184.0
pivot_offset = Vector2(125, 175)
mouse_filter = 2

[node name="Background" type="ColorRect" parent="CardFocusFeatures/CardContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CardBox" type="VBoxContainer" parent="CardFocusFeatures/CardContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="TopMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TitleRow" type="HBoxContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LeftMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow"]
layout_mode = 2

[node name="CardCost" type="Label" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 16
text = "  8"
horizontal_alignment = 1

[node name="TitleIcon" type="TextureRect" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow"]
visible = false
layout_mode = 2
texture = ExtResource("1_xb23j")
expand_mode = 3

[node name="TitlePanel" type="PanelContainer" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow"]
layout_mode = 2

[node name="TitleBackground" type="ColorRect" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow/TitlePanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="TitleNameBox" type="HBoxContainer" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow/TitlePanel"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="TitleNameMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow/TitlePanel/TitleNameBox"]
layout_mode = 2

[node name="TitleName" type="RichTextLabel" parent="CardFocusFeatures/CardContainer/CardBox/TitleRow/TitlePanel/TitleNameBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
text = "Super Cool Move Name"

[node name="UnderTitleMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
layout_mode = 2

[node name="AbiltiesImagePanel" type="PanelContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ImagePanel" type="PanelContainer" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel"]
layout_mode = 2

[node name="CardImage" type="TextureRect" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/ImagePanel"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("1_xb23j")
expand_mode = 2

[node name="StatsHBox" type="HBoxContainer" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsLeftMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox"]
layout_mode = 2

[node name="StatsColumn" type="VBoxContainer" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="RangePanel" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox/StatsColumn" instance=ExtResource("2_ujv87")]
layout_mode = 2

[node name="SpeedPanel" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox/StatsColumn" instance=ExtResource("2_ujv87")]
layout_mode = 2

[node name="PowerPanel" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox/StatsColumn" instance=ExtResource("2_ujv87")]
layout_mode = 2

[node name="ArmorPanel" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox/StatsColumn" instance=ExtResource("2_ujv87")]
layout_mode = 2

[node name="GuardPanel" parent="CardFocusFeatures/CardContainer/CardBox/AbiltiesImagePanel/StatsHBox/StatsColumn" instance=ExtResource("2_ujv87")]
layout_mode = 2

[node name="BelowImageMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
layout_mode = 2

[node name="EffectBox" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="EffectBackground" type="ColorRect" parent="CardFocusFeatures/CardContainer/CardBox/EffectBox"]
custom_minimum_size = Vector2(230, 40)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="EffectText" type="RichTextLabel" parent="CardFocusFeatures/CardContainer/CardBox/EffectBox"]
layout_mode = 2
bbcode_enabled = true
text = "[b]HIT:[/b] Do something cool
[b]AFTER:[/b] Do something else"
fit_content = true

[node name="EffectBoostMargin" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
layout_mode = 2

[node name="BoostBox" type="MarginContainer" parent="CardFocusFeatures/CardContainer/CardBox"]
layout_mode = 2

[node name="BoostBackground" type="ColorRect" parent="CardFocusFeatures/CardContainer/CardBox/BoostBox"]
custom_minimum_size = Vector2(230, 40)
layout_mode = 2
color = Color(0.294118, 0, 0.294118, 1)

[node name="BoostDetailsBox" type="HBoxContainer" parent="CardFocusFeatures/CardContainer/CardBox/BoostBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 5

[node name="BoostCostIcon" type="TextureRect" parent="CardFocusFeatures/CardContainer/CardBox/BoostBox/BoostDetailsBox"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 4

[node name="BoostCost" type="RichTextLabel" parent="CardFocusFeatures/CardContainer/CardBox/BoostBox/BoostDetailsBox/BoostCostIcon"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "  8"

[node name="BoostText" type="RichTextLabel" parent="CardFocusFeatures/CardContainer/CardBox/BoostBox/BoostDetailsBox"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]HIT:[/b] Do something cool
[b]AFTER:[/b] Do something else"
fit_content = true

[node name="FancyCard" type="TextureRect" parent="CardFocusFeatures/CardContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_krtfi")
expand_mode = 1

[node name="CardBack" type="TextureRect" parent="CardFocusFeatures/CardContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_pvdi7")
expand_mode = 5

[node name="SelectedBorder" type="TextureRect" parent="CardFocusFeatures/CardContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_h5u6x")

[node name="CancelContainer" type="Node2D" parent="CardFocusFeatures"]

[node name="Stopwatch" type="Sprite2D" parent="CardFocusFeatures/CancelContainer"]
position = Vector2(74, 52)
scale = Vector2(0.06, 0.06)
texture = ExtResource("7_rrupl")

[node name="CancelCost" type="Label" parent="CardFocusFeatures/CancelContainer"]
offset_left = 86.0
offset_top = 6.0
offset_right = 126.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 65
text = "8"
horizontal_alignment = 1

[node name="StunIndicator" type="Node2D" parent="CardFocusFeatures"]
visible = false

[node name="XOut" type="TextureRect" parent="CardFocusFeatures/StunIndicator"]
modulate = Color(1, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -195.0
offset_right = 135.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_wk1ir")

[node name="StunPanel" type="PanelContainer" parent="CardFocusFeatures/StunIndicator"]
offset_left = -91.5
offset_top = -220.0
offset_right = 91.5
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_btcod")

[node name="StunMargin" type="MarginContainer" parent="CardFocusFeatures/StunIndicator/StunPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="StunLabel" type="Label" parent="CardFocusFeatures/StunIndicator/StunPanel/StunMargin"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "STUNNED"

[node name="FocusFeatures" type="Node2D" parent="."]

[node name="Focus" type="TextureButton" parent="FocusFeatures"]
offset_left = -125.0
offset_top = -175.0
offset_right = 125.0
offset_bottom = 184.0
stretch_mode = 0

[connection signal="button_down" from="FocusFeatures/Focus" to="." method="_on_focus_button_down"]
[connection signal="button_up" from="FocusFeatures/Focus" to="." method="_on_focus_button_up"]
[connection signal="mouse_entered" from="FocusFeatures/Focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="FocusFeatures/Focus" to="." method="_on_focus_mouse_exited"]
[connection signal="pressed" from="FocusFeatures/Focus" to="." method="_on_focus_pressed"]
